# Swarm_Robotics

./: .gitignore  data_file.csv
results/RISULTATI_OTTENUTI/: data_analysis.py  small_arena.tar.xz
results/RISULTATI_OTTENUTI/big_arena/AK_false/: data_analysis.py  res_bigarena_AKfalse.txt
results/RISULTATI_OTTENUTI/big_arena/AK_false/2021-02-09_robots#20_timeout_const#10_augmmented_knowledge#false/: seed#10_results.csv  seed#11_results.csv  seed#12_results.csv  seed#14_results.csv  seed#15_results.csv  seed#16_results.csv  seed#19_results.csv  seed#20_results.csv  seed#6_results.csv  seed#8_results.csv  seed#9_results.csv
results/RISULTATI_OTTENUTI/big_arena/AK_false/2021-02-09_robots#20_timeout_const#15_augmmented_knowledge#false/: seed#10_results.csv  seed#11_results.csv  seed#12_results.csv  seed#13_results.csv  seed#14_results.csv  seed#15_results.csv  seed#16_results.csv  seed#17_results.csv  seed#18_results.csv  seed#19_results.csv  seed#20_results.csv  seed#4_results.csv  seed#6_results.csv  seed#8_results.csv  seed#9_results.csv
results/RISULTATI_OTTENUTI/big_arena/AK_false/2021-02-09_robots#20_timeout_const#20_augmmented_knowledge#false/: seed#10_results.csv  seed#12_results.csv  seed#13_results.csv  seed#14_results.csv  seed#15_results.csv  seed#16_results.csv  seed#18_results.csv  seed#19_results.csv  seed#1_results.csv  seed#20_results.csv  seed#5_results.csv  seed#6_results.csv
results/RISULTATI_OTTENUTI/big_arena/AK_false/2021-02-09_robots#20_timeout_const#5_augmmented_knowledge#false/: seed#11_results.csv  seed#12_results.csv  seed#15_results.csv  seed#16_results.csv  seed#17_results.csv  seed#18_results.csv  seed#19_results.csv  (+4 more)
results/RISULTATI_OTTENUTI/big_arena/AK_true/: data_analysis.py  res_bigarena_AKtrue.txt
results/RISULTATI_OTTENUTI/small_arena/AK_false/: data_analysis.py  res_smallarena_AKfalse.txt
results/RISULTATI_OTTENUTI/small_arena/AK_true/: data_analysis.py  res_smallarena_AKtrue.txt
src/examples/behaviors/: CMakeLists.txt  CO.DE.c  distribution_functions.c  distribution_functions.h  kilobot_ALF_client-server_client.c  kilobot_ALF_client-server_server.c  kilobot_ALF_cre.c  kilobot_ALF_crec.c  kilobot_ALF_cres.c  kilobot_ALF_dhtf.c  kilobot_ALF_dhtf.c.bak  kilobot_ALF_dhtf2.c  kilobot_v1.c  kilobot_v2.c  move_to_position.c
src/examples/experiments/: dhtf_init_generator.py  kilobot_ALF_client-server_client.argos  kilobot_ALF_client-server_server.argos  kilobot_ALF_cre_client.argos  kilobot_ALF_cre_server.argos  kilobot_ALF_dhtf+_client.argos  kilobot_ALF_dhtf+_server.argos  kilobot_ALF_dhtf2_client.argos  kilobot_ALF_dhtf2_server.argos  kilobot_ALF_dhtf_client-PAR.argos  kilobot_ALF_dhtf_client.argos  kilobot_ALF_dhtf_client_g.argos  kilobot_ALF_dhtf_server-PAR.argos  kilobot_ALF_dhtf_server.argos  kilobot_ALF_dhtf_server_g.argos  kilobot_ALF_dhtf_template.argos  kilobot_ALF_navigation.argos  kilobot_ALF_wallavoid_dhtf_client.argos  kilobot_ALF_wallavoid_dhtf_server.argos  kilobot_v1.argos  kilobot_v2.argos
src/examples/experiments/bash_scripts/: dhtf_client_server.sh
src/examples/experiments/batch/: BATCHforDHTF.sh  kilobot_ALF_dhtf_client.argos  kilobot_ALF_dhtf_client_TEMP.argos  kilobot_ALF_dhtf_server.argos  kilobot_ALF_dhtf_server_TEMP.argos  simple_experiment.sh  simple_experiment_dhtf.sh  xtermDHTF.sh
src/examples/loop_functions/ARK_loop_functions/: CMakeLists.txt
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_client/: CMakeLists.txt  kilobot_ALF_client.cpp  kilobot_ALF_client.h
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_client-server/: CMakeLists.txt  kilobot_ALF_client-server.cpp  kilobot_ALF_client-server.h
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_cre/: CMakeLists.txt  kilobot_ALF_cre.cpp  kilobot_ALF_cre.h
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_dhtf/: kilobot_ALF_dhtf.cpp  kilobot_ALF_dhtf.h
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_dhtf+/: CMakeLists.txt  kilobot_ALF_dhtf+.cpp  kilobot_ALF_dhtf+.h
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_dhtf-PAR/: CMakeLists.txt  kilobot_ALF_dhtf-PAR.cpp
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_dhtf.bak/: kilobot_ALF_dhtf.cpp
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_dhtf2/: CMakeLists.txt  kilobot_ALF_dhtf2.cpp  kilobot_ALF_dhtf2.h
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_dhtf_g/: CMakeLists.txt  kilobot_ALF_dhtf_g.cpp  kilobot_ALF_dhtf_g.h
src/examples/loop_functions/ARK_loop_functions/kilobot_ALF_wallavoid_dhtf/: CMakeLists.txt  kilobot_ALF_wallavoid_dhtf.cpp  kilobot_ALF_wallavoid_dhtf.h
src/examples/loop_functions/ARK_loop_functions/kilobot_v1/: CMakeLists.txt  kilobot_v1.cpp  kilobot_v1.h
src/examples/loop_functions/ARK_loop_functions/kilobot_v2/: CMakeLists.txt  kilobot_v2.cpp  kilobot_v2.h
src/examples/loop_functions/ARK_loop_functions/navigation/: go_to.cpp  go_to.h
(+352 files in other folders)
