# If Qt+OpenGL dependencies were found, descend into these directories
if(ARGOS_COMPILE_QTOPENGL)
  	add_subdirectory(demoC)
  	add_subdirectory(clustering)
	add_subdirectory(kilobot_v1)
	add_subdirectory(kilobot_v2)
	add_subdirectory(navigation)
	add_subdirectory(kilobot_ALF_client-server)
	add_subdirectory(kilobot_ALF_client)
	add_subdirectory(kilobot_ALF_dhtf)
	add_subdirectory(kilobot_ALF_dhtf_g)
endif(ARGOS_COMPILE_QTOPENGL)
